# chant

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.html  README.md
docs/: spec.md
examples/: hello_world.cha
src/: CMakeLists.txt  main.c  tokenizer.c  tokenizer.h
src/chant/: CMakeLists.txt  lexical.hpp  main.cpp  tokenizer.cpp  tokenizer.hpp
src/parser/: _parser.h  combinators.c  combinators.h  parser.c  parser.h  result.c  result.h
tests/: CMakeLists.txt  Makefile  README.md  a.out  test  tokenizer.c
